# bot_v1

./: .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: docker-image.yml
src/bot_v1/: main.py
